# tilted_gorilla

./: .gitignore  Cargo.toml  README.md
ai/: Cargo.toml
ai/src/: equity.rs  lib.rs  odds.rs  policy.rs  tests.rs
engine/: Cargo.toml
engine/src/: card.rs  deck.rs  describe.rs  eval.rs  hand.rs  lib.rs  pot.rs  rng.rs  tests.rs
web/: Cargo.toml  index.html
web/src/: audio.rs  game.rs  main.rs
